          pick
        - modify the FT1 font code to use the first encoding as a default
          if we don't find a unicode encoding
        - use the glyph bbox to calculate the glyph bitmaps for rendering
          with FT1 rather than the global ascender/descender.  This helps
          with fonts that have broken metrics.
	- fix calculation of descender for FT2, it was calculating the
	  minimum decent rather than the maximum for the characters in 
	  the string
	- didn't set default for bounding_box() utf8 parameter (caused a
	  warning when calling bounding_box() on a FT2 font with no utf8
	  parameter)
	- Added lib/Imager/Draw.pod documentation of primitives.
	- Added lib/Imager/Transformations.pod, some docs of simple transforms.
	- Added lib/Imager/ImageTypes.pod, draft of ImageType pod.
	- Added lib/Imager/Filters.pod, draft of Filters pod.
	- Added lib/Imager/Engines.pod, draft of Engines pod.
        - added getpixel() and setpixel() methods
        - added Artur's OSX dlload() emulation, with minor changes
        - modified _color() to work around a 5.6.0 bug
        - replaced old gif options with tags
        - we now log which memory block is being freed before giving 
          an error on it being re-freed
        - fixed stupid bug in deleting tags
	- fixed minor pod errors involving &gt;

0.40?
        - make t1log optional, defaulting to off.  You can enable the log
          with Imager::init(t1log=>1) (Ticket #369)
        - quote a few hash key strings to prevent warnings on 5.004
        - modify quantization code to handle 1 channel images 
          correctly (Ticket #365)
        - make channel pointer to i_gsamp() const int * so we can pass
          const arrays

=================================================================

        For latest versions check the Imager-devel pages:
        http://www.eecs.umich.edu/~addi/perl/Imager/devel/

=================================================================
